# CustomLibrary

./: .gitignore  CMakeLists.txt  CustomLibrary.sln  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc.yml
CustomLibrary/: CString.h  CustomLibrary.vcxitems  CustomLibrary.vcxitems.filters  Doc.docx  Doxyfile  Engine.cpp  SDLRenderer.h
CustomLibrary/CustomLibrary/: BasicTypes.h  CString.h  Circle.h  Client.h  ConsoleDisplay.h  Equation2.0.h  Error.cpp  Error.h  GeneticAlgorithm.h  Graph.h  Line.h  Logging.h  Matrix.h  NeuralNet.h  Observer.h  Parse.h  Point.h  RandomGenerator.h  Rect.h  ResourceManager.h  SSLClient.h  Tags.h  Timer.h  Traits.h  UnitConvertison.h  Vector.h  utility.cpp  utility.h
CustomLibrary/html/: _animation_8h_source.html  _animation_lite_8h_source.html  _auto_pointer_8h_source.html  _basic_types_8h_source.html  _button_8h_source.html  _c_string_8h.html  _c_string_8h_source.html  _client_8h_source.html  _coder_8h_source.html  _collider_8h_source.html  _console_display_8h_source.html  _console_utility_8h_source.html  _engine_8h_source.html  _equation2_80_8h_source.html  _error_8h_source.html  _event_8h_source.html  _genetic_algorithm_8h_source.html  _geometry_8h_source.html  _graph_8h_source.html  _gui_8h_source.html  _matrix_8h_source.html  _neural_net_8h_source.html  _observer_8h_source.html  _parse_8h_source.html  _random_generator_8h_source.html  _resource_manager_8h_source.html  _s_d_l_tags_8h_source.html  _s_d_l_traits_8h_source.html  _s_d_l_window_8h_source.html  _s_s_l_client_8h_source.html  _sprite_8h_source.html  _state_8h_source.html  _text_8h_source.html  _texture_8h_source.html  _timer_8h_source.html  _unit_convertison_8h_source.html  _vector_8h_source.html  _widget_8h_source.html  _window_8h_source.html  annotated.html  (+152 more)
RNN_GPU/: RNN_GPU.vcxproj  RNN_GPU.vcxproj.filters  hello_world.cl  main.cpp
Test/: Globals.h  Pattern.h  Source.cpp  Test.vcxproj  Test.vcxproj.filters  crtp_pattern.h  main.cpp  sdl.cpp  temp.cpp
cmake/: CustomLibrary-config.cmake  FindAsio.cmake  cmake_uninstall.cmake.in  core-config.cmake
doc/: CMakeLists.txt  Makefile  index.rst
doc/_build/html/: .buildinfo  genindex.html  search.html
doc_gen/: Doxyfile  Doxyfile-mcss  Doxyfile.in  Makefile  conf.py
docs/: Animation_8h.html  BasicTypes_8h.html  Button_8h.html  CString_8h.html  Camera2D_8h.html  Circle_8h.html  Collider_8h.html  Dim_8h.html  Drawable_8h.html  Engine_8h.html  Equation_8h.html  Error_8h.html  Event_8h.html  GeneticAlgorithm_8h.html  Geometry_8h.html  Graph_8h.html  HTTP_8h.html  Line_8h.html  Loader_8h.html  LoopIterator_8h.html  Matrix_8h.html  Music_8h.html  NeuralNet_8h.html  Observer_8h.html  Parse_8h.html  Player_8h.html  Point_8h.html  RandomGenerator_8h.html  Rect_8h.html  Render_8h.html  Renderer_8h.html  SDLWindow_8h.html  SSLSession_8h.html  Session_8h.html  State_8h.html  Streamer_8h.html  Surface_8h.html  Text_8h.html  Texture_8h.html  Timer_8h.html  (+111 more)
docs/api/: class_view_hierarchy.html  classctl_1_1sdl_1_1Animation.html  classctl_1_1sdl_1_1Camera2D.html  classctl_1_1sdl_1_1Delayed.html  classctl_1_1sdl_1_1Font.html  classctl_1_1sdl_1_1Frame.html  classctl_1_1sdl_1_1FunctionalO.html  classctl_1_1sdl_1_1FunctionalR.html  classctl_1_1sdl_1_1FunctorO.html  classctl_1_1sdl_1_1FunctorR.html  classctl_1_1sdl_1_1IState.html  classctl_1_1sdl_1_1IWindow.html  classctl_1_1sdl_1_1Music.html  classctl_1_1sdl_1_1Pressable.html  classctl_1_1sdl_1_1Renderer.html  classctl_1_1sdl_1_1RunLoop.html  classctl_1_1sdl_1_1SDL.html  classctl_1_1sdl_1_1SDLWindow.html  classctl_1_1sdl_1_1StateManager.html  classctl_1_1sdl_1_1Surface.html  classctl_1_1sdl_1_1Text.html  classctl_1_1sdl_1_1Texture.html  classctl_1_1sdl_1_1UserEvent.html  classctl_1_1sdl_1_1Window.html  classctl_1_1sdl_1_1detail_1_1__Drawable__.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Animation_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Frame_3_01mth_1_1Circle_3_01int_00_01int_01_4_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Frame_3_01mth_1_1Line_3_01int_01_4_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Frame_3_01mth_1_1Point_3_01int_01_4_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Frame_3_01mth_1_1Rect_3_01int_00_01int_01_4_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Texture_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01Type_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01std_1_1span_3_01Type_00_01Size_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Drawable___3_01std_1_1span_3_01Type_01_4_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Loader__.html  classctl_1_1sdl_1_1detail_1_1__Loader___3_01Font_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Loader___3_01Music_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Loader___3_01Text_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Loader___3_01Texture_00_01Full_00_01Impl_01_4.html  classctl_1_1sdl_1_1detail_1_1__Player__.html  (+118 more)
examples/: CMakeLists.txt
examples/EquationSolver/: main.cpp
examples/GeneticAlgorithm/: main.cpp
examples/Graphs/: main.cpp
examples/Logger/: main.cpp
examples/Math/: main.cpp
examples/NeuralNetwork/: main.cpp
examples/Parsing/: main.cpp
examples/Pong/: main.cpp
examples/Snake/: main.cpp
examples/Starfield/: main.cpp
examples/Widgets/: main.cpp
examples/wget/: main.cpp
include/: Dim.h  Point.h  RandomGenerator.h  Rect.h  Tags.h
include/CustomLibrary/: AutoPointer.h  BasicTypes.h  CString.h  Circle.h  Client.h  Coder.h  Collider.h  ConsoleDisplay.h  ConsoleUtility.h  Dim.h  Equation.h  Error.h  GeneticAlgorithm.h  Geometry.h  Graph.h  HTTP.h  IO.h  Line.h  LoopIterator.h  Matrix.h  NeuralNet.h  Observer.h  Parse.h  Point.h  RandomGenerator.h  Rect.h  SSLSession.h  (+7 more)
tests/: CMakeLists.txt  FeatureTests.cpp  MainTest  SDLTests.cpp  Tests.cpp  temp.cpp
(+235 files in other folders)
